@@ -1,4 +1,9 @@
-# $snafu: NEWS,v 1.10 2003/09/27 05:50:32 marc Exp $
+# $snafu: NEWS,v 1.11 2003/10/06 19:06:31 marc Exp $
+
+List of changes for (for 2.0)
+
+ - fix pasto that use lat instead of long when coding d105 and d108
+   waypoints.   Thanks to Frank Eberle for the notification of the problem.
 
 List of changes/additions (for 1.9x)
 
